--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ section {
     width: 100%;
     position: relative;
     height: 40vw;
-    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../../photos/IMG-20190606-WA0009.jpg);
+    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../photos/IMG-20190606-WA0009.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top; }
@@ -813,7 +813,7 @@ section {
     .news--5__content--details__bg {
       position: relative;
       grid-column: 1/-1;
-      background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../../img/chona.jpg);
+      background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../img/chona.jpg);
       background-size: cover;
       background-repeat: no-repeat; }
       .news--5__content--details__bg::after {
@@ -995,14 +995,14 @@ section {
   .news--8__bg-1, .news--8__bg-2, .news--8__bg-3, .news--8__bg-4 {
     height: 100%;
     position: relative;
-    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../../img/football3.jpg);
+    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../img/football3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top; }
   .news--8__bg-2 {
     grid-column: 1/-1;
     grid-row: 1/2;
-    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../../img/football2.jpg); }
+    background-image: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 0.7)), url(../img/football2.jpg); }
   .news--8__bg-3 {
     grid-column: 1/2;
     grid-row: 2/3; }
