--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;400&family=Crimson+Text:ital,wght@0,600;1,700&family=Zen+Tokyo+Zoo&display=swap");
+/* 
+
+$breakpoint call manager
+X-small -- xsm--
+Small -- sm -- 
+Medium -- md -- 920(57.5em);
+large -- lg -- 1020px(63.75em);
+Extra large -xl- 1250px(78.125em);
+deflult  -- --- -- 1800px;
+Extra extra large -xxl- 1800px(112.5em);
+
+
+*/
 .afterBgTrans::after {
   background: transparent; }
 
@@ -20,15 +33,27 @@
 
 html {
   font-size: 62.5%; }
+  @media only screen and (max-width: 78.125em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   font-size: 1.4rem;
   font-family: 'Tajawal', sans-serif; }
+  @media only screen and (max-width: 63.75em) {
+    body {
+      font-size: 1.6rem; } }
 
 .container {
   width: 100%;
   max-width: 120rem;
   margin: 0 auto; }
+  @media only screen and (max-width: 63.75em) {
+    .container {
+      max-width: 95%; } }
   .container__border {
     padding: 1rem 0;
     border-top: 1px solid #e1e2e0;
@@ -36,14 +61,6 @@ body {
 
 span {
   text-transform: uppercase; }
-
-.png {
-  width: 100vw; }
-
-.s1,
-.s2,
-.s3 {
-  height: 50vw; }
 
 .heading--light {
   color: #dbd8d8 !important; }
@@ -116,7 +133,7 @@ span {
 
 .heading__inline--block {
   margin-top: 4rem;
-  width: 71%; }
+  max-width: 260px; }
   .heading__inline--block > span {
     display: inline-block;
     background: #2d2d31;
@@ -418,6 +435,9 @@ section {
 .navigation {
   padding: 1rem 0;
   position: relative; }
+  @media only screen and (max-width: 57.5em) {
+    .navigation {
+      padding: 0; } }
   .navigation::after {
     position: absolute;
     bottom: 0;
@@ -427,6 +447,9 @@ section {
     height: 2px;
     background: #e1e2e0;
     display: block; }
+    @media only screen and (max-width: 57.5em) {
+      .navigation::after {
+        background: transparent; } }
   .navigation::before {
     position: absolute;
     top: 0;
@@ -440,6 +463,10 @@ section {
     display: grid;
     justify-content: center;
     align-content: center; }
+    @media only screen and (max-width: 57.5em) {
+      .navigation__nav {
+        display: none;
+        opacity: 0; } }
   .navigation__list {
     display: flex;
     list-style: none; }
@@ -484,6 +511,9 @@ section {
     height: 1px;
     top: 100%;
     left: -1%; }
+  @media only screen and (max-width: 63.75em) {
+    .news--1 {
+      grid-template-columns: 1fr; } }
   .news--1__left-cta {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
@@ -501,10 +531,13 @@ section {
     .news--1__left-cta:after {
       width: 98%;
       height: 1px;
-      top: 90%;
+      top: 95%;
       left: -1%; }
     .news--1__left-cta:last-of-type::after {
       background: transparent; }
+      @media only screen and (max-width: 63.75em) {
+        .news--1__left-cta:last-of-type::after {
+          background-color: #dbd8d8; } }
   .news--1__left {
     position: relative; }
     .news--1__left::after {
@@ -516,11 +549,19 @@ section {
       height: 95%;
       display: block;
       background: #e1e2e0; }
+    @media only screen and (max-width: 63.75em) {
+      .news--1__left::after {
+        background: transparent; } }
     .news--1__left-img {
       display: block;
       margin: 0 auto;
       margin-bottom: 5px;
       width: 100%; }
+      @media only screen and (max-width: 63.75em) {
+        .news--1__left-img {
+          margin-bottom: 1rem;
+          width: 100%;
+          height: 15vw; } }
       .news--1__left-img-text {
         margin-left: 1rem;
         text-transform: capitalize; }
@@ -532,8 +573,7 @@ section {
     shape-outside: polygon(0% 0, 100% 0%, 100% 100%, 0 100%); }
   .news--1__content-1, .news--1__content-2, .news--1__content-3 {
     position: relative;
-    padding: 1rem;
-    top: 1%; }
+    padding: 1rem; }
     .news--1__content-1::after, .news--1__content-2::after, .news--1__content-3::after {
       position: absolute;
       top: 0;
@@ -547,8 +587,16 @@ section {
       width: 95%; }
   .news--1__content-1::after, .news--1__content-3::after {
     background: transparent; }
+    @media only screen and (max-width: 63.75em) {
+      .news--1__content-1::after, .news--1__content-3::after {
+        background-color: #dbd8d8; } }
   .news--1__content-1-img, .news--1__content-3-img {
     width: 100%; }
+  .news--1__content-1::after {
+    background: transparent; }
+  @media only screen and (max-width: 63.75em) {
+    .news--1__content-3::after {
+      background: transparent; } }
   .news--1__right {
     padding: 0 2rem; }
   .news--1__content-r1, .news--1__content-r2 {
@@ -566,14 +614,63 @@ section {
       width: 100%;
       height: 1px;
       top: 100%; }
+  @media only screen and (max-width: 63.75em) {
+    .news--1__content-r {
+      grid-gap: 1rem;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); } }
+  @media only screen and (max-width: 63.75em) {
+    .news--1__content-r1 {
+      position: relative;
+      padding: 1rem;
+      display: flex;
+      justify-items: center;
+      align-items: center;
+      flex-direction: column; }
+      .news--1__content-r1::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        content: "";
+        width: 1px;
+        height: 95%;
+        display: block;
+        background: #e1e2e0; } }
+  .news--1__content-r1-img {
+    width: 96%;
+    display: block;
+    grid-column: 1/2; }
+    @media only screen and (max-width: 63.75em) {
+      .news--1__content-r1-img {
+        width: 100%;
+        margin-bottom: 1rem; } }
   .news--1__content-r2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content; }
+    @media only screen and (max-width: 63.75em) {
+      .news--1__content-r2 {
+        position: relative;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column; }
+        .news--1__content-r2::after {
+          position: absolute;
+          top: 0;
+          right: 0;
+          content: "";
+          width: 1px;
+          height: 95%;
+          display: block;
+          background: #e1e2e0; } }
     .news--1__content-r2-img {
       width: 96%;
       display: block;
       grid-column: 1/2; }
+      @media only screen and (max-width: 63.75em) {
+        .news--1__content-r2-img {
+          width: 100%;
+          margin-bottom: 1rem; } }
   .news--1__content-r3 {
     background: orangered;
     padding: .5rem;
@@ -581,11 +678,18 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content; }
+    @media only screen and (max-width: 63.75em) {
+      .news--1__content-r3 {
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+        margin-bottom: 1rem; }
+        .news--1__content-r3 h4 {
+          grid-row: 2/3; } }
     .news--1__content-r3-img {
-      align-self: end;
       width: 96%;
       display: block;
-      grid-column: 2/3; }
+      grid-column: 1/2;
+      margin: auto; }
 
 .news--2 {
   display: grid;
@@ -629,6 +733,9 @@ section {
     height: 1px;
     top: 100%;
     left: 1%; }
+  @media only screen and (max-width: 57.5em) {
+    .news--3 {
+      grid-template-columns: 1fr; } }
   .news--3__img-box {
     position: relative;
     padding: 0 1rem; }
@@ -641,10 +748,22 @@ section {
       height: 95%;
       display: block;
       background: #e1e2e0; }
+    @media only screen and (max-width: 57.5em) {
+      .news--3__img-box {
+        padding: 1rem 0; }
+        .news--3__img-box:after {
+          width: 100%;
+          height: 1px;
+          top: 99%;
+          left: 0; } }
   .news--3__img {
     width: 100%;
     display: block;
     height: 30vw; }
+    @media only screen and (max-width: 57.5em) {
+      .news--3__img {
+        height: 40vw;
+        margin-bottom: 2rem; } }
   .news--3__content {
     position: relative;
     padding: 1rem 1rem;
@@ -754,6 +873,9 @@ section {
     display: grid;
     grid-column-gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr)); }
+    @media only screen and (max-width: 57.5em) {
+      .news--5__content {
+        grid-template-columns: 35% 1fr; } }
   .news--5__content--title__box {
     position: relative; }
     .news--5__content--title__box::after {
@@ -836,20 +958,68 @@ section {
     .news--5__content--details__img {
       display: block;
       width: 100%; }
+  @media only screen and (max-width: 57.5em) {
+    .news--5__content--subject__content {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+      grid-gap: 1rem; } }
+  @media only screen and (max-width: 57.5em) {
+    .news--5__content--subject {
+      position: relative;
+      padding-top: 2rem;
+      grid-column: 1/-1; }
+      .news--5__content--subject::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        content: "";
+        width: 1px;
+        height: 95%;
+        display: block;
+        background: #e1e2e0; }
+      .news--5__content--subject:after {
+        height: 1px;
+        width: 100%;
+        top: 0; } }
   .news--5__content--subject__box {
     display: grid;
     grid-template-columns: 40% 1fr;
     margin-bottom: 2rem; }
+    @media only screen and (max-width: 57.5em) {
+      .news--5__content--subject__box {
+        grid-template-columns: 1fr; } }
   .news--5__content--subject__img-ads {
     grid-column: 1/-1;
     width: 98%;
     display: block;
     margin: 0 auto; }
+    @media only screen and (max-width: 57.5em) {
+      .news--5__content--subject__img-ads {
+        height: 100%; } }
   .news--5__content--subject__img {
     width: 95%;
     display: block; }
+    @media only screen and (max-width: 57.5em) {
+      .news--5__content--subject__img {
+        width: 100%; } }
   .news--5__content--subject__details {
     padding: .5rem; }
+    @media only screen and (max-width: 57.5em) {
+      .news--5__content--subject__details {
+        position: relative; }
+        .news--5__content--subject__details::after {
+          position: absolute;
+          top: 0;
+          right: 0;
+          content: "";
+          width: 1px;
+          height: 95%;
+          display: block;
+          background: #e1e2e0; }
+        .news--5__content--subject__details:after {
+          height: 1px;
+          width: 100%;
+          top: 100%; } }
 
 .section-news--6 {
   padding: 0 6rem; }
@@ -861,6 +1031,9 @@ section {
     display: grid;
     grid-column-gap: 2rem;
     grid-template-columns: minmax(45rem, 40%) minmax(50rem, 1fr); }
+    @media only screen and (max-width: 57.5em) {
+      .news--6__content {
+        grid-template-columns: 1fr; } }
   .news--6__content--text {
     color: #2d2d31;
     font-weight: 400;
@@ -951,8 +1124,14 @@ section {
     grid-column-gap: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); }
+    @media only screen and (max-width: 57.5em) {
+      .news--7__content--box {
+        grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); } }
   .news--7__content {
     display: grid; }
+    @media only screen and (max-width: 57.5em) {
+      .news--7__content {
+        padding: 2rem 0; } }
     .news--7__content--list {
       list-style-type: none; }
       .news--7__content--list > li {
@@ -971,7 +1150,7 @@ section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   grid-template-rows: 50vw;
-  grid-auto-rows: 50vw; }
+  grid-auto-rows: 100vw; }
   .news--8::after {
     position: absolute;
     top: 0;
@@ -1050,6 +1229,9 @@ section {
   .news--10__content-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); }
+    @media only screen and (max-width: 57.5em) {
+      .news--10__content-box {
+        grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr)); } }
   .news--10__content--img {
     width: 100%; }
   .news--10__content {
@@ -1066,6 +1248,9 @@ section {
     background: #e1e2e0; }
   .news--10__content--1:after, .news--10__content--2:after, .news--10__content--3:after {
     right: 0; }
+  @media only screen and (max-width: 57.5em) {
+    .news--10__content--2::after {
+      background: transparent; } }
 
 .news--11 {
   padding: 1rem 0;
@@ -1087,6 +1272,10 @@ section {
   .news--11__content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); }
+    @media only screen and (max-width: 57.5em) {
+      .news--11__content {
+        grid-row-gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr)); } }
   .news--11__left, .news--11__middle, .news--11__right {
     padding: 0 1rem; }
   .news--11__left, .news--11__middle {
@@ -1100,6 +1289,16 @@ section {
       height: 95%;
       display: block;
       background: #e1e2e0; }
+  @media only screen and (max-width: 57.5em) {
+    .news--11__middle::after {
+      background: transparent; } }
+  @media only screen and (max-width: 57.5em) {
+    .news--11__right {
+      grid-column: 1/-1;
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-rows: max-content min-content;
+      grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); } }
   .news--11__left-img, .news--11__right-img {
     width: 100%;
     height: 100%; }
@@ -1126,6 +1325,14 @@ section {
       top: 95%; }
     .news--11__left-content:last-of-type:after, .news--11__right-content:last-of-type:after {
       background: transparent; }
+  @media only screen and (max-width: 57.5em) {
+    .news--11__right-content {
+      grid-gap: 1rem;
+      padding: 1rem 0;
+      grid-template-columns: 1fr;
+      grid-template-rows: 30rem; }
+      .news--11__right-content:after {
+        top: 100%; } }
   .news--11__middle-img {
     width: 100%; }
 
