--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,31 +7,46 @@
 }
 
 html {
+    // 1rem == 10px;
     font-size: 62.5%;
+
+    @include respond(xl) {
+        // 1 rem == 8px;
+        font-size: 50%;
+    }
+
+    @include respond(xxl) {
+        // 1 rem == 12px;
+        font-size: 75%;
+    }
 }
 
 body {
     font-size: 1.4rem;
     font-family: 'Tajawal', sans-serif;
+
+    @include respond(lg) {
+        font-size: 1.6rem;
+    }
 }
-.container{
+
+.container {
     width: 100%;
     max-width: 120rem;
-    margin:0 auto;
-    &__border{
+    margin: 0 auto;
+
+    @include respond(lg) {
+        max-width: 95%;
+    }
+    
+
+    &__border {
         padding: 1rem 0;
         border-top: 1px solid $color-3;
         border-bottom: 1px solid $color-3;
     }
 }
-span{
+
+span {
     text-transform: uppercase;
-}
-.png{
-    width: 100vw;
-}
-.s1,
-.s2,
-.s3{
-    height:50vw;
 }
