--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,7 +24,7 @@ html {
 body {
     font-size: 1.4rem;
     font-family: 'Tajawal', sans-serif;
-
+    overflow-x: hidden !important;
     @include respond(lg) {
         font-size: 1.6rem;
     }
